@@ -4,6 +4,7 @@ import Coms from '../utils/coms';
 import MapContext from './MapContext';
 import CampaignContext from './CampaignContext';
 import { getCharacters, getEnemies } from '../data/moduleData';
+import { getActionPoints, getMaxActionPoints } from '../data/attributeHelper';
 
 const GameContext = React.createContext({});
 export default GameContext;
@@ -115,8 +116,9 @@ export function GameProvider({ children }) {
         if (!activeCharacter) {
             return;
         }
+        const actionPoints = getActionPoints(activeCharacter);
         // if on the last character and they are out of action points
-        if (activeCharacter.actionPoints === 0 && activeCharacterIndex === characters.length-1) {
+        if (actionPoints === 0 && activeCharacterIndex === characters.length-1) {
             setCombatTurn(COMBAT_TURN.ENEMY);
             setActiveEnemyIndex(0);
         }
@@ -136,7 +138,7 @@ export function GameProvider({ children }) {
             // reset action points for all characters
             for (const character of newCharacters) {
                 const data = characterData[character.type];
-                character.actionPoints = data?.actionPoints;
+                character.actionPoints = getMaxActionPoints(character);
             }
             
             return newCharacters;
