@@ -77,6 +77,7 @@ v0.8.0 (unreleased)
 * Added equipment slots for characters
 * Equipment as an item in modules and editor
 * Equipment assign and unassign dialog
+* Max HP and Action Points can be modified by equipment
 
 Bug Fixes:
 * Sir Jacob is no longer stopped by chests
